--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,13 @@
         "symfony/framework-bundle": "5.4.*",
         "symfony/proxy-manager-bridge": "5.4.*",
         "symfony/runtime": "5.4.*",
-        "symfony/yaml": "5.4.*"
+        "symfony/validator": "5.4.*",
+        "symfony/yaml": "5.4.*",
+        "willdurand/hateoas": "^3.8",
+        "willdurand/hateoas-bundle": "^2.4"
     },
     "require-dev": {
+        "symfony/maker-bundle": "^1.38"
     },
     "config": {
         "allow-plugins": {
