--- a/.env
+++ b/.env
@@ -17,3 +17,21 @@
 APP_ENV=dev
 APP_SECRET=b7ab47c2a6e6eb465e93d260f709ff12
 ###< symfony/framework-bundle ###
+
+###> doctrine/doctrine-bundle ###
+# Format described at https://www.doctrine-project.org/projects/doctrine-dbal/en/latest/reference/configuration.html#connecting-using-a-url
+# IMPORTANT: You MUST configure your server version, either here or in config/packages/doctrine.yaml
+#
+# DATABASE_URL="sqlite:///%kernel.project_dir%/var/data.db"
+# DATABASE_URL="mysql://db_user:db_password@127.0.0.1:3306/db_name?serverVersion=5.7&charset=utf8mb4"
+DATABASE_URL="postgresql://symfony:ChangeMe@0.0.0.0:32769/app?serverVersion=13&charset=utf8"
+###< doctrine/doctrine-bundle ###
+
+###> nelmio/cors-bundle ###
+CORS_ALLOW_ORIGIN='^https?://(localhost|127\.0\.0\.1)(:[0-9]+)?$'
+###< nelmio/cors-bundle ###
+
+DATABASE_NAME=app
+DATABASE_USER=symfony
+DATABASE_PASSWORD=ChangeMe
+DATABASE_ROOT_PASSWORD=secret
